fixed column alignment. Still waiting on max-width property

--- a/styles/main.css
+++ b/styles/main.css
@@ -933,6 +933,7 @@ text-indent: -1rem;
     font-size:6rem;
     justify-self:start:
     line-height:1;
+    line-height:1;
 }
 
 .justify-right{
